fix: cannot insert csv with spaces next to comma into multi-enum field (#105)
Refs: #104